--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 <button id="play-again-btn" class="btn-primary">العب مرة أخرى</button>
             </div>
         </div>
+</div>
     
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">{ "imports": { "three": "https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.module.js", "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/" } }</script>
@@ -98,5 +99,6 @@
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-color-wars-3d';
         const DB_PATH = `artifacts/${appId}/public/data/color-wars-3d-games`;
 
-... (300 lines left)
-Collapse
+</script>
+</body>
+</html>
